// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders 1`] = `
<div
  className="Inline-sc-1rz1cju-0 kwswbg"
>
  <div
    className="OuterCircle-sc-1059clw-0 cBDWNI"
    role="progressbar"
    size="xsmall"
  >
    <span
      className="InnerCircle-sc-6khuip-0 irgwxx"
      size="xsmall"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 cBDWNI"
    role="progressbar"
    size="xsmall"
  >
    <span
      className="InnerCircle-sc-6khuip-0 cHXAOJ"
      color="piccolo.100"
      size="xsmall"
    />
  </div>
</div>
`;

exports[`Loader renders with different colours 1`] = `
<div
  className="Inline-sc-1rz1cju-0 kwswbg"
>
  <div
    className="OuterCircle-sc-1059clw-0 cBDWNI"
    role="progressbar"
    size="xsmall"
  >
    <span
      className="InnerCircle-sc-6khuip-0 eQxFNh"
      color="dodoria.100"
      size="xsmall"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 cBDWNI"
    role="progressbar"
    size="xsmall"
  >
    <span
      className="InnerCircle-sc-6khuip-0 bmumWJ"
      color="trunks.100"
      size="xsmall"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 cBDWNI"
    role="progressbar"
    size="xsmall"
  >
    <span
      className="InnerCircle-sc-6khuip-0 paXXF"
      color="#663399"
      size="xsmall"
    />
  </div>
</div>
`;

exports[`Loader renders with sizes 1`] = `
<div
  className="Inline-sc-1rz1cju-0 kwswbg"
>
  <div
    className="OuterCircle-sc-1059clw-0 cBDWNI"
    role="progressbar"
    size="xsmall"
  >
    <span
      className="InnerCircle-sc-6khuip-0 irgwxx"
      size="xsmall"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 kwvAxI"
    role="progressbar"
    size="small"
  >
    <span
      className="InnerCircle-sc-6khuip-0 eVStzC"
      size="small"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 fDOafQ"
    role="progressbar"
    size="medium"
  >
    <span
      className="InnerCircle-sc-6khuip-0 giWcon"
      size="medium"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 foKFxY"
    role="progressbar"
    size="large"
  >
    <span
      className="InnerCircle-sc-6khuip-0 eVStzC"
      size="large"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 hwfNCU"
    role="progressbar"
    size="xlarge"
  >
    <span
      className="InnerCircle-sc-6khuip-0 khzBMP"
      size="xlarge"
    />
  </div>
</div>
`;
